--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuracion del datasource JDBC
-spring.datasource.url = jdbc:mysql://localhost:3306/prode_bd2?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = prode
-spring.datasource.password = prode
+spring.datasource.url = jdbc:mysql://localhost:3306/prode?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
 
 #spring.datasource.initialization-mode=always
 
